Fixing some errors

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,29 +1,42 @@
 {% extends 'base.html' %}
- 
   {% block container %}
-    <h1>Send your message for users.</h1>
     {% if current_user.is_authenticated %}
-      <h3>Hey {{ current_user.username }}!!</h3>
-        <form action="" method="POST">
-          {{ form.hidden_tag() }}
-          <p>
-            {{ form.recipients.label }}
-            {{ form.recipients }}
-          </p><br>
-          <p>
-            {{ form.subject.label }}
-            {{ form.subject(size=80) }}
-          </p><br>
-          <p>
-            {{ form.body.label }}
-            {{ form.body(cols=80, rows=10) }}
-          </p><br>
-          <p>
-            {{ form.submit() }}
-          </p>
-        </form>
-      <a href="{{ url_for('auth.logout') }}">Click here to logout</a>
+      <table>
+        <tr>
+          <td>
+            <h1>Send your message for users.</h1>
+            <!--<h3>Hey {{ current_user.username }}!!</h3>-->
+              <form action="" method="POST">
+                {{ form.hidden_tag() }}
+                <p>
+                  {{ form.recipients.label }}
+                  {{ form.recipients }}
+                </p><br>
+                <p>
+                  {{ form.subject.label }}
+                  {{ form.subject(size=80) }}
+                </p><br>
+                <p>
+                  {{ form.body.label }}
+                  {{ form.body(cols=80, rows=10) }}
+                </p><br>
+                <p>
+                  {{ form.submit() }}
+                </p>
+              </form>
+            <a href="{{ url_for('auth.logout') }}">Click here to logout</a>
+          </td>
+          <td valign="top">
+            <div style="background-color:yellow; float:right;">
+             {% for event in events %}
+              <p>{{ event.id }}</p>
+             {% endfor %}
+            </div>
+          </td>
+        </tr>
+      </table>
     {% else %}
+    <h1>Welcome to Web-mailer! </h1>
     Click here to <a href="{{ url_for('auth.login') }}">login with LDAP</a>
     {% endif %}
   {% endblock %}
